--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
 <H1> My I.T Profile </h1>
+
+<p>Your interests in IT. Explore an ideal job. Create a personal profile. Develop a project idea.</p>
+  
+<p> Writing up an initial document covering all of the different areas listed above (and detailed below), to be then formatted and presented as a website hosted on GitHub Pages.</p>
+
+<h2>Interest in IT</h2>
+<p>You should answer the questions below as best you can. Each answer should be one paragraph in length.</p>
+  <li>
+    <ul>What is your interest in IT? When did your interest in IT start? Was there a particular event or person that sparked your interest? Outline your IT experience (if any).</ul>
+    <ul>Why did you choose to come to RMIT?</ul>
+    <ul>What do you expect to learn during your studies?</ul>
+  </li>
