--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   
 <p> Writing up an initial document covering all of the different areas listed above (and detailed below), to be then formatted and presented as a website hosted on GitHub Pages.</p>
 
+<h2>Personal Information</h2>
+
+<p>Include your name, student number, email address, and some basic background </p>
+
 <h2>Interest in IT</h2>
 <p>You should answer the questions below as best you can. Each answer should be one paragraph in length.</p>
   <li>
