--- a/index.html
+++ b/index.html
@@ -1,17 +1,34 @@
-<H1> My I.T Profile </h1>
-
-<p>Your interests in IT. Explore an ideal job. Create a personal profile. Develop a project idea.</p>
+<header>
+  <H1> My I.T Profile </h1>
+</header>
+  <p>Your interests in IT. Explore an ideal job. Create a personal profile. Develop a project idea.</p>
   
-<p> Writing up an initial document covering all of the different areas listed above (and detailed below), to be then formatted and presented as a website hosted on GitHub Pages.</p>
+  <p> Writing up an initial document covering all of the different areas listed above (and detailed below), to be then formatted and presented as a website hosted on GitHub Pages.</p>
 
-<h2>Personal Information</h2>
+<section>
+  <div>
+    <h2>Personal Information</h2>
+  </div>
+  <div>
+    <p>My name is <strong>Ryan Bullock</strong> my student number is <strong>s3273504</strong> and my email address is <strong>
+      s3273504@student.rmit.edu.au</strong> or <strong>arbiejb@gmail.com</strong>.</p>
+    <p>I have been working in the I.T industry for about 7 or 8 years now as a support desk engineer and a systems analyst after i completed my
+    advanced diplomia of computer systems engineering in 2011 i recieved a job offer from my work placement as a support desk engineer i then
+    started my ouwn business doing consumer repairs and building small websites. I now work as a systems analyst monitoring cloud server and
+    supporting a MPLS network will developing SQL stored proceedeors and reports for our account package.</p>
+  </div>
+ </section>
 
-<p>Include your name, student number, email address, and some basic background </p>
-
-<h2>Interest in IT</h2>
-<p>You should answer the questions below as best you can. Each answer should be one paragraph in length.</p>
-  <li>
-    <ul>What is your interest in IT? When did your interest in IT start? Was there a particular event or person that sparked your interest? Outline your IT experience (if any).</ul>
-    <ul>Why did you choose to come to RMIT?</ul>
-    <ul>What do you expect to learn during your studies?</ul>
-  </li>
+ <section>
+   <div>
+    <h2>Interest in IT</h2>
+   </div>
+   <div> 
+    <p>You should answer the questions below as best you can. Each answer should be one paragraph in length.</p>
+    <li>
+      <ul>What is your interest in IT? When did your interest in IT start? Was there a particular event or person that sparked your interest? Outline your IT experience (if any).</ul>
+      <ul>Why did you choose to come to RMIT?</ul>
+      <ul>What do you expect to learn during your studies?</ul>
+    </li>
+   <div>
+ </section>
