--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html>
+<body>
 <header>
   <H1> My I.T Profile </h1>
 </header>
@@ -25,10 +28,12 @@
    </div>
    <div> 
     <p>You should answer the questions below as best you can. Each answer should be one paragraph in length.</p>
-    <li>
-      <ul>What is your interest in IT? When did your interest in IT start? Was there a particular event or person that sparked your interest? Outline your IT experience (if any).</ul>
-      <ul>Why did you choose to come to RMIT?</ul>
-      <ul>What do you expect to learn during your studies?</ul>
-    </li>
+    <ul>
+      <li>What is your interest in IT? When did your interest in IT start? Was there a particular event or person that sparked your interest? Outline your IT experience (if any).</li>
+      <li>Why did you choose to come to RMIT?</li>
+      <li>What do you expect to learn during your studies?</li>
+    </ul>
    <div>
  </section>
+</body>
+</html>
