--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
   <p> Writing up an initial document covering all of the different areas listed above (and detailed below), to be then formatted and presented as a website hosted on GitHub Pages.</p>
 
-<section>
+<section class="section-personal">
   <div>
     <h2>Personal Information</h2>
   </div>
@@ -22,7 +22,7 @@
   </div>
  </section>
 
- <section>
+ <section class="section-Interest">
    <div>
     <h2>Interest in IT</h2>
    </div>
