--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en"> 
+<head>
+  <link href="style.css" rel="stylesheet" type="text/css"/>
+</head>
 <body>
 <header>
   <H1> My I.T Profile </h1>
