--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
   <p> Writing up an initial document covering all of the different areas listed above (and detailed below), to be then formatted and presented as a website hosted on GitHub Pages.</p>
 
 <section class="section-personal">
-  <div>
+  <div class="row">
     <h2>Personal Information</h2>
-  </div>
-  <div>
+  
     <p>My name is <strong>Ryan Bullock</strong> my student number is <strong>s3273504</strong> and my email address is <strong>
       s3273504@student.rmit.edu.au</strong> or <strong>arbiejb@gmail.com</strong>.</p>
+    
     <p>I have been working in the I.T industry for about 7 or 8 years now as a support desk engineer and a systems analyst after i completed my
     advanced diplomia of computer systems engineering in 2011 i recieved a job offer from my work placement as a support desk engineer i then
     started my ouwn business doing consumer repairs and building small websites. I now work as a systems analyst monitoring cloud server and
@@ -27,10 +27,9 @@
  </section>
 
  <section class="section-Interest">
-   <div>
+   <div class="row">
     <h2>Interest in IT</h2>
-   </div>
-   <div> 
+    
     <p>You should answer the questions below as best you can. Each answer should be one paragraph in length.</p>
     <ul>
       <li>What is your interest in IT? When did your interest in IT start? Was there a particular event or person that sparked your interest? Outline your IT experience (if any).</li>
