--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
   <link href="style.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
-<header>
-  <H1> My I.T Profile </h1>
+<header class="main-heading">
+  <div>
+    <H1> My I.T Profile </h1>
+  <div>
 </header>
   <p>Your interests in IT. Explore an ideal job. Create a personal profile. Develop a project idea.</p>
   
