--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en"> 
 <head>
-  <link href="Vendors/CSS/normalize.css" rel="stylesheet" type="text/css"/>
-  <link href="Resources/CSS/style.css" rel="stylesheet" type="text/css"/>
+  <link href="normalize.css" rel="stylesheet" type="text/css"/>
+  <link href="style.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
 <header >
@@ -18,7 +18,7 @@
     <p>My name is <strong>Ryan Bullock</strong> my student number is <strong>s3273504</strong> and my email address is <strong>
       s3273504@student.rmit.edu.au</strong> or <strong>arbiejb@gmail.com</strong>.</p>
       
-    <img class="profile-photo" src="Resources/Image/843.jpg">
+    <img class="profile-photo" src="843.jpg">
     
     <p class="personal-test">I have been working in the I.T industry for about 7 or 8 years now as a support desk engineer and a systems analyst after i completed my
     advanced diplomia of computer systems engineering in 2011 i recieved a job offer from my work placement as a support desk engineer i then
