--- a/index.html
+++ b/index.html
@@ -35,7 +35,13 @@
     <p>You should answer the questions below as best you can. Each answer should be one paragraph in length.</p>
     <ul>
       <li>What is your interest in IT? When did your interest in IT start? Was there a particular event or person that sparked your interest? Outline your IT experience (if any).</li>
+      <p>My interest in IT is mainly the server/networking side with alittle bit of web design on the side, I first got interesting in I.T 
+      Whenmy dad bought home a intel pentium 2 and i started using ICQ and playing the sims and abs odessy and slowly bilt in to the
+      house hold I.T support person and helping friends and family with printing and browser viewing issue, i then did some I.T classes
+      in high and finaly got in to the I.T field. I am now working as a System analyst/systems engineer for a small compnay, I orignaly
+      started out as a level 1 support technician and had a little I.T side bussiness.</p>
       <li>Why did you choose to come to RMIT?</li>
+      <p>I orgianlly applied for la trobe uni as it was close to my house but found out that they do not hold night class or online class</p>
       <li>What do you expect to learn during your studies?</li>
     </ul>
      </div>
