--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       
     <h2>Personal Information</h2>
       
-      <img class="profile-photo" src="Resources/Image/843.jpg">
+      <img class="profile-photo" src="843.jpg">
   
     <p>My name is <strong>Ryan Bullock</strong> my student number is <strong>s3273504</strong> and my email address is <strong>
         s3273504@student.rmit.edu.au</strong> or <strong>arbiejb@gmail.com</strong>.</p>
