--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
     <section>
         <div class="row">
             <h2>Personal Profile</h2>
+          
+          <img src="capture1.png">
+          <img src="capture1.png">
+          <img src="capture1.png">
             
             <p> </p>
         </div>
